--- a/pyspinmanager/spin_templates/pipeline.json.j2
+++ b/pyspinmanager/spin_templates/pipeline.json.j2
@@ -88,7 +88,7 @@
         }
       ],
       "name": "Bake-{{ env }}",
-      "namespace": "default",
+      "namespace": "{{ namespace }}",
       "outputName": "{{ releaseName }}",
       "overrides": {},
       "refId": "1",
