--- a/pyspinmanager/spin_templates/pipeline.json.j2
+++ b/pyspinmanager/spin_templates/pipeline.json.j2
@@ -91,7 +91,7 @@
       "namespace": "{{ namespace }}",
       "outputName": "{{ releaseName }}",
       "overrides": {
-        "global.kubeVersionOverride": "{{ kubeVersion }}",
+        "global.kubeVersionOverride": "{{ kubeVersion }}"
       },
       "refId": "1",
       "templateRenderer": "HELM3",
