support github action template (webhook)

--- a/pyspinmanager/spin_templates/pipeline_github-actions.json.j2
+++ b/pyspinmanager/spin_templates/pipeline_github-actions.json.j2
@@ -9,7 +9,7 @@
       "defaultArtifact": {
         "artifactAccount": "{{ artifactAccount }}",
         "customKind": true,
-        "reference": "{{ helmRepository }}/${trigger['buildInfo']['name']}/${trigger['buildInfo']['scm'][0]['sha1']}/${trigger['buildInfo']['scm'][0]['sha1']}.tgz",
+        "reference": "{{ helmRepository }}/${parameters['repository']}/${parameters['tag']}/${parameters['tag']}.tgz",
         "type": "http/file"
       },
       "displayName": "helm-package",
@@ -17,7 +17,7 @@
       "matchArtifact": {
         "artifactAccount": "{{ artifactAccount }}",
         "customKind": true,
-        "reference": "{{ helmRepository }}/${trigger['buildInfo']['name']}/${trigger['buildInfo']['scm'][0]['sha1']}/${trigger['buildInfo']['scm'][0]['sha1']}.tgz",
+        "reference": "{{ helmRepository }}/${parameters['repository']}/${parameters['tag']}/${parameters['tag']}.tgz",
         "type": "http/file"
       },
       "useDefaultArtifact": true,
@@ -27,7 +27,7 @@
       "defaultArtifact": {
         "artifactAccount": "{{ artifactAccount }}",
         "customKind": true,
-        "reference": "{{ helmRepository }}/${trigger['buildInfo']['name']}/${trigger['buildInfo']['scm'][0]['sha1']}/{{ valueFile }}",
+        "reference": "{{ helmRepository }}/${parameters['repository']}/${parameters['tag']}/{{ valueFile }}",
         "type": "http/file"
       },
       "displayName": "{{ env }}-values",
@@ -35,7 +35,7 @@
       "matchArtifact": {
         "artifactAccount": "{{ artifactAccount }}",
         "customKind": true,
-        "reference": "{{ helmRepository }}/${trigger['buildInfo']['name']}/${trigger['buildInfo']['scm'][0]['sha1']}/{{ valueFile }}",
+        "reference": "{{ helmRepository }}/${parameters['repository']}/${parameters['tag']}/{{ valueFile }}",
         "type": "http/file"
       },
       "useDefaultArtifact": true,
@@ -59,8 +59,8 @@
     {
       "address": "{{ notifyEmailAddr }}",
       "cc": "",
-      "customBody": {% raw %}"<b> Status: </b> Bake: ${#stageByRefId(\"1\")[\"status\"]}, Deploy: ${#stageByRefId(\"2\")[\"status\"]}<br><b> Bake Error: </b> ${(#stageByRefId(\"1\")[\"status\"] == \"TERMINAL\") ? #stageByRefId(\"1\")[\"context\"][\"exception\"][\"details\"][\"errors\"][0] : \"None\"}<br><b> Deploy Error: </b> ${(#stageByRefId(\"2\")[\"status\"] == \"TERMINAL\") ? #stageByRefId(\"2\")[\"context\"][\"exception\"][\"details\"][\"errors\"][0] : \"None\"}<br><b>Spinnaker Application: </b> <a href=\"{% endraw %}{{ spinnakerUri }}{% raw %}/#/applications/${execution['application']}/executions\"> ${execution['application']} </a><br><b>Spinnaker Pipeline Execution Details - UI: </b> <a href=\"{% endraw %}{{ spinnakerUri }}{% raw %}/#/applications/${execution['application']}/executions/details/${execution['id']}\"> ${execution['name']} </a><br><b>Spinnaker Pipeline Execution Details - JSON: </b> <a href=\"{% endraw %}{{ spinnakerUri }}{% raw %}/pipelines/${execution['id']}\"> ${execution['id']} </a><br><b>Travis Build Number: </b> <a href=\"${trigger['buildInfo']['url']}\"> ${trigger['buildNumber']} </a><br><b>Github Repository: </b> <a href=\"https://github.com/${trigger['buildInfo']['name']}\"> ${trigger['buildInfo']['name']} </a><br><b>Github Branch/Tag: </b> ${trigger['buildInfo']['scm'][0]['branch']}<br><b>Github Commit ID: </b> <a href=\"https://github.com/${trigger['buildInfo']['name']}/commit/${trigger['buildInfo']['scm'][0]['sha1']}\"> ${trigger['buildInfo']['scm'][0]['sha1']} </a><br><b>Trigger Type: </b> ${trigger['type']}<br><b>Triggered By: </b> ${trigger['user']}<br>"{% endraw %},
-      "customSubject": "${execution['status']} - ${execution['application']} - ${trigger['buildInfo']['name']} - ${execution['name']}",
+      "customBody": {% raw %}"<b> Status: </b> Bake: ${#stageByRefId(\"1\")[\"status\"]}, Deploy: ${#stageByRefId(\"2\")[\"status\"]}<br><b> Bake Error: </b> ${(#stageByRefId(\"1\")[\"status\"] == \"TERMINAL\") ? #stageByRefId(\"1\")[\"context\"][\"exception\"][\"details\"][\"errors\"][0] : \"None\"}<br><b> Deploy Error: </b> ${(#stageByRefId(\"2\")[\"status\"] == \"TERMINAL\") ? #stageByRefId(\"2\")[\"context\"][\"exception\"][\"details\"][\"errors\"][0] : \"None\"}<br><b>Spinnaker Application: </b> <a href=\"{% endraw %}{{ spinnakerUri }}{% raw %}/#/applications/${execution['application']}/executions\"> ${execution['application']} </a><br><b>Spinnaker Pipeline Execution Details - UI: </b> <a href=\"{% endraw %}{{ spinnakerUri }}{% raw %}/#/applications/${execution['application']}/executions/details/${execution['id']}\"> ${execution['name']} </a><br><b>Spinnaker Pipeline Execution Details - JSON: </b> <a href=\"{% endraw %}{{ spinnakerUri }}{% raw %}/pipelines/${execution['id']}\"> ${execution['id']} </a><br><b>Travis Build Number: </b> <a href=\"${trigger['buildInfo']['url']}\"> ${trigger['buildNumber']} </a><br><b>Github Repository: </b> <a href=\"https://github.com/${parameters['repository']}\"> ${parameters['repository']} </a><br><b>Github Branch/Tag: </b> ${trigger['buildInfo']['scm'][0]['branch']}<br><b>Github Commit ID: </b> <a href=\"https://github.com/${parameters['repository']}/commit/${parameters['tag']}\"> ${parameters['tag']} </a><br><b>Trigger Type: </b> ${trigger['type']}<br><b>Triggered By: </b> ${trigger['user']}<br>"{% endraw %},
+      "customSubject": "${execution['status']} - ${execution['application']} - ${parameters['repository']} - ${execution['name']}",
       "level": "pipeline",
       "type": "email",
       "when": [
@@ -146,11 +146,12 @@
   ],
   "triggers": [
     {
-      "description": "(Travis) travis-infra: {{ gitOwner }}/{{ gitRepo }}/{{ branch }}",
       "enabled": {{ triggerEnabled }},
-      "job": "{{ gitOwner }}/{{ gitRepo }}/{{ branch }}",
-      "master": "travis-infra",
-      "type": "travis"
+      "payloadConstraints": {
+        "runCheck": "github-actions-{{ gitCheckCluster }}"
+      },
+      "source": "{{ gitRepo }}_{{ gitCheckCluster }}",
+      "type": "webhook"
     }
   ]
 }
